confirmed text changed

--- a/Pzl.Did.Mobile.Client/www/css/style.css
+++ b/Pzl.Did.Mobile.Client/www/css/style.css
@@ -165,6 +165,6 @@
   font-family: monospace;
   font-size: 30px;
   letter-spacing: 7px;
-  color: green;
+  color: #6B9C68;
   text-decoration:underline;
 }
