--- a/Pzl.Did.Mobile.Client/www/css/style.css
+++ b/Pzl.Did.Mobile.Client/www/css/style.css
@@ -56,6 +56,31 @@
   width: 25px;
   height: 25px;
 }
+.icon-import{
+  content: url('icons/icon-import.png');
+  width: 25px;
+  height: 25px;
+}
+.icon-hourglass{
+  content: url('icons/icon-hourglass.png');
+  width: 16px;
+  height: 23px;
+}
+.icon-confirm{
+  content: url('icons/icon-confirm.png');
+  width: 40px;
+  height: 40px;
+}
+.icon-privateignore{
+  content: url('icons/icon-privateignore.png');
+  width: 40px;
+  height: 40px;
+}
+.icon-coffee{
+  content: url('icons/icon-coffee.png');
+  width: 30px;
+  height: 25px;
+}
 .button-bar.button-bar-bg{
   background-color: #FDF3E2;
 }
@@ -80,6 +105,10 @@
     width: 55% !important;
 }
 .img-password{
+    height: 15% !important;
+    width: 55% !important;
+}
+.img-import{
     height: 15% !important;
     width: 55% !important;
 }
@@ -176,8 +205,9 @@
     line-height:15px;
 }
 .bar .button.button-clear {
-    font-size: 13px;
+    font-size: 15px;
     font-weight:400;
+    color: Black;
 }
 .text-confirmed{
   width: 200px;
@@ -203,3 +233,21 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e2e2', end
 .list-inset .item.item-input input{
   margin-left : 12px;
 }
+.item-complex .item-content, .item-radio .item-content {
+  padding: 10px 16px 5px 16px !important;
+ }
+ .row .col.hint-row{
+   font-size: 12px;
+   color: #7D7B79;
+   padding: 0px;
+   text-align: right;
+ }
+ .row .col.hint-row.right{
+   text-align: right;
+ }
+ .row .col.hint-row.left{
+   text-align: left;
+ }
+ .row .col.hint-row.center{
+   text-align: center;
+ }
