--- a/Pzl.Did.Mobile.Client/www/css/style.css
+++ b/Pzl.Did.Mobile.Client/www/css/style.css
@@ -6,6 +6,7 @@
 .logo{
   height: 60vw;
   width: 60vw;
+  padding-top: 40px;
 }
 .bar-custom{
   background-color: #0092a7;
@@ -34,9 +35,8 @@
 }
 .icon-edit{
   content: url('icons/icon-edit.png');
-  width: 35px;
+  width: 40px;
   height: 35px;
-  margin-top: 4px
 }
 .icon-ignore{
   content: url('icons/icon-ignore.png');
@@ -50,13 +50,13 @@
 }
 .icon-username{
   content: url('icons/icon-username.png');
-  width: 25px;
-  height: 20px;
+  width: 20px;
+  height: 15px;
 }
 .icon-password{
   content: url('icons/icon-password.png');
-  width: 30px;
-  height: 25px;
+  width: 25px;
+  height: 17px;
 }
 .icon-import{
   content: url('icons/icon-import.png');
@@ -99,8 +99,8 @@
     font-size: 3.5vw;
 }
 .img-approved{
-    height: 35vw; /*20*/
-    width: 35vw;  /*45*/
+    /*height: 12vw;
+    width: 60vw;  */
 }
 .img-username{
     height: 15% !important;
@@ -119,8 +119,8 @@
     margin-bottom: 20vw;
 }
 .dataload-image{
-    margin-top: 60vw;
-    margin-bottom: 60vw;
+    margin-top: 20vw;
+    margin-bottom: 20vw;
 }
 .success-message{
     color: green;
@@ -144,7 +144,7 @@
     background-color: #f44336;
 }
 .item-button-right{
-    padding-right: 85px;
+    padding-right: 25vw;
 }
 .numberCircle{
     border-radius: 50%;
@@ -275,4 +275,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', end
   padding-right: 50px;
 }
 .confirmMsg-container{
+  padding-top: 20px;
+}
+.login-padding{
+  padding-right: 50px;
+  padding-left: 50px;
 }
